# distributeddatamgr_datamgr

./: OAT.xml  bundle.json  distributeddatamgr.gni  hisysevent.yaml
conf/: config.json
frameworks/common/: concurrent_map.h  lru_bucket.h
frameworks/common/test/: lru_bucket_test.cpp
frameworks/innerkitsimpl/distributeddatafwk/include/: cov_util.h  ikvstore_client_death_observer.h  ikvstore_observer.h  ikvstore_single.h  ikvstore_sync_callback.h  itypes_util.h  kvdbstore_result_set.h  kvstore_datashare_bridge.h  kvstore_datashare_result_set.h  kvstore_predicates.h
frameworks/innerkitsimpl/distributeddatafwk/src/: blob.cpp  change_notification.cpp  data_query.cpp  delegate_mgr_callback.h  distributed_kv_data_manager.cpp  idevice_status_change_listener_impl.cpp  ikvstore.cpp  ikvstore_data_service.cpp  ikvstore_observer.cpp  ikvstore_resultset.cpp  ikvstore_single.cpp  ikvstore_snapshot.cpp  ikvstore_sync_callback.cpp  itypes_util.cpp  kv_utils.cpp  kvdbstore_datashare_native.cpp  kvdbstore_result_set.cpp  kvstore_client.cpp  kvstore_client.h  kvstore_datashare_bridge.cpp  kvstore_datashare_result_set.cpp  kvstore_observer_client.h  kvstore_predicates.cpp  kvstore_resultset_client.cpp  kvstore_service_death_notifier.cpp  kvstore_service_death_notifier.h  kvstore_snapshot_client.cpp  kvstore_sync_callback_client.cpp  kvstore_sync_callback_client.h  single_kvstore_client.cpp  single_kvstore_client.h  sync_observer.cpp  sync_observer.h
frameworks/innerkitsimpl/distributeddatafwk/test/: BUILD.gn
frameworks/innerkitsimpl/kvdb/include/: auto_sync_timer.h  backup_manager.h  convertor.h  dev_manager.h  device_store_impl.h  kvdb_service.h  kvdb_service_client.h  observer_bridge.h  security_manager.h  single_store_impl.h  store_factory.h  store_manager.h  store_util.h  system_api.h
frameworks/innerkitsimpl/kvdb/src/: auto_sync_timer.cpp  backup_manager.cpp  convertor.cpp  dev_manager.cpp  device_store_impl.cpp  kvdb_service_client.cpp  observer_bridge.cpp  security_manager.cpp  single_store_impl.cpp  store_factory.cpp  store_manager.cpp  store_result_set.cpp  store_util.cpp  system_api.cpp
frameworks/innerkitsimpl/kvdb/test/: auto_sync_timer_test.cpp  dev_manager_test.cpp  single_store_impl_test.cpp
frameworks/innerkitsimpl/object/include/: object_service.h  object_service_proxy.h
frameworks/innerkitsimpl/object/src/: iobject_callback.cpp  object_service_proxy.cpp
interfaces/innerkits/app_distributeddata/: BUILD.gn
interfaces/innerkits/distributeddata/: BUILD.gn
interfaces/jskits/distributeddata/: BUILD.gn  distributed_data.js
services/distributeddataservice/adapter/: BUILD.gn
services/distributeddataservice/app/: BUILD.gn  distributed_data.cfg
services/distributeddataservice/framework/: BUILD.gn
services/distributeddataservice/framework/test/: BUILD.gn  checker_manager_test.cpp
services/distributeddataservice/service/: BUILD.gn
services/distributeddataservice/test/: BUILD.gn
services/rdb/: rdb_service_impl.cpp  rdb_service_impl.h  rdb_syncer_factory.cpp
test/distributedtest/single_kvstore_client/: distributed_test_agent.cpp
test/fuzztest/autolaunch_fuzzer/: BUILD.gn
test/fuzztest/kvstore_fuzzer/: BUILD.gn  kvstore_fuzzer.cpp
test/fuzztest/kvstoredisksize_fuzzer/: BUILD.gn
(+499 files in other folders)
