# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/test.gni")
import("//build/ohos_var.gni")

module_output_path = "distributeddatamgr/distributeddatafwk"

###############################################################################
config("module_private_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "../include/",
  ]
}

ohos_unittest("CheckerManagerTest") {
  module_out_path = module_output_path
  sources = [
    "../checker/checker_manager.cpp",
    "../checker/default/bundle_checker.cpp",
    "../checker/default/system_checker.cpp",
    "checker_manager_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  deps = [
    "//foundation/distributeddatamgr/distributeddatamgr/interfaces/innerkits/distributeddata:distributeddata_inner",
    "//foundation/distributeddatamgr/distributeddatamgr/services/distributeddataservice/adapter:distributeddata_adapter",
    "//third_party/googletest:gtest_main",
    "//utils/native/base:utils",
  ]
}

ohos_unittest("EventCenterTest") {
  module_out_path = module_output_path
  sources = [ "event_center_test.cpp" ]

  configs = [ ":module_private_config" ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  deps = [
    "//foundation/distributeddatamgr/distributeddatamgr/interfaces/innerkits/distributeddata:distributeddata_inner",
    "//foundation/distributeddatamgr/distributeddatamgr/services/distributeddataservice/adapter:distributeddata_adapter",
    "//third_party/googletest:gtest_main",
    "//utils/native/base:utils",
  ]
}

ohos_unittest("SerializableTest") {
  module_out_path = module_output_path

  sources = [ "serializable_test.cpp" ]

  configs = [ ":module_private_config" ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  deps = [
    "//foundation/distributeddatamgr/distributeddatamgr/interfaces/innerkits/distributeddata:distributeddata_inner",
    "//foundation/distributeddatamgr/distributeddatamgr/services/distributeddataservice/adapter:distributeddata_adapter",
    "//third_party/googletest:gtest_main",
    "//utils/native/base:utils",
  ]
}

###############################################################################
group("unittest") {
  testonly = true

  deps = []

  deps += [
    ":CheckerManagerTest",
    ":EventCenterTest",
    ":SerializableTest",
  ]
}
###############################################################################
